# tp-3-wiktor_igor

./: CMakeLists.txt  bindings.cpp  main.cpp  piki.cpp  piki.hpp  przetwarzanie_sygnalu.cpp  przetwarzanie_sygnalu.hpp  sygnaly.cp313-win_amd64.pyd  test.py
